--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,8 +39,6 @@
   --color-eminence-800: #66347f;
   --color-eminence-900: #522c63;
   --color-eminence-950: #32133f;
-
-
 }
 
 @media (prefers-color-scheme: dark) {
@@ -53,6 +51,6 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  /*font-family: Arial, Helvetica, sans-serif;*/
 }
 
