focus on Courses page rewrite / getting to work

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,7 +16,7 @@
     --font-sans: var(--font-inter);
     --font-family-outfit: var(--font-outfit);
 
-    --color-primary: #252528;
+    --color-primary: #5c6faf;
     --color-primary-50: #f4f6fa;
     --color-primary-100: #e5eaf4;
     --color-primary-200: #d2dbeb;
